--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-sitemap.url=https://www.seressencial.pt/1_pt_0_sitemap.xml
+sitemap.url=<CHANGE_ME>
 sitemap.url.extension=.html
 pagespeed.categories=PERFORMANCE,ACCESSIBILITY,BEST_PRACTICES,SEO,PWA
 pagespeed.strategy=MOBILE
-google.api.key=AIzaSyAcY5krtqSipu3i7ecbPQkM-O9rbyGCbVU
+google.api.key=<CHANGE_ME>
 output.directory=C:\PerformanceResults
 
 quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss} %-5p [%c] %s%e%n
