--- a/pom.xml
+++ b/pom.xml
@@ -126,7 +126,7 @@
                             <outputDirectory>${basedir}/target</outputDirectory>
                             <resources>
                                 <resource>
-                                    <directory>src/main/resources</directory>
+                                    <directory>src/main/resources/external</directory>
                                     <filtering>true</filtering>
                                 </resource>
                             </resources>
